--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
     <div class="row g-5">
       <div class="col-md-6">
-        <h2>Starter projects</h2>
-        <p>Ready to beyond the starter template? Check out these open source projects that you can quickly duplicate to a new GitHub repository.</p>
+        <h2>Project Navigation</h2>
+        <p>Links to some sample pages, and a copy of EVT for this project</p>
         <ul class="icon-list">
-          <li>Bootstrap npm starter</li>
-          <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
+          <li><a href="about.html">About the Project</a></li>         
+          <li><a href="edition/">EVT Edition</a></li>         
         </ul>
       </div>
 
@@ -53,6 +53,12 @@
         <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
         <ul class="icon-list">
           <li><a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap quick start guide</a></li>         
+        </ul>
+
+        <h2>Project Navigation</h2>
+        <ul class="icon-list">
+          <li><a href="about.html">About the Project</a></li>         
+          <li><a href="edition/">EVT Edition</a></li>         
         </ul>
       </div>
     </div>
