--- a/index.html
+++ b/index.html
@@ -1,27 +1,59 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" data-bs-theme="dark">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>EN6138: Digital Scholarly Editing | 2022 / 2023 | University of Galway</title>
-
+    <title>The Constant Maid (1833)</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-
     <!-- Favicons -->
     <!-- <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico"> -->
 
-
-
-
   </head>
   <body>
+    <nav class="navbar bg-body-tertiary">
+          <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                  <img src="UGLogo1.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-centre">
+                  The Constant Maid by James Shirley
+              </a>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+              <a class="navbar-brand" href="#">Home</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Context</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">About the Author</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Annotations</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Bibliography</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">EVT Edition</a>
+                      </li>
+                  </ul>
+                  <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+              </div>
+          </div>
+      </nav>
 
 <div class="col-lg-8 mx-auto p-3 py-md-5">
   <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
