--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Context</a>
+                <a class="nav-link active" aria-current="page" href="context.html">Context</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About the Author</a>
+                <a class="nav-link" href="abouttheauthor.html">About the Author</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tcmannotations.html">Annotations</a>
+                <a class="nav-link" href="annotations.html">Annotations</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Bibliography</a>
