--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="MALP/DSE/UGLogo1.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-centre">
+      <a class="navbar-brand" href="index.html">
+        <img src="UGLogo1.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-centre">
         The Constant Maid by James Shirley
       </a>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="annotations.html">Annotations</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Bibliography</a>
+                <a class="nav-link" href="bibliography.html">Bibliography</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">EVT Edition</a>
