--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a class="nav-link" href="bibliography.html">Bibliography</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">EVT Edition</a>
+                <a class="nav-link" href="edition/">EVT Edition</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
