--- a/context.html
+++ b/context.html
@@ -44,7 +44,7 @@
                 <a class="nav-link" href="bibliography.html">Bibliography</a>
               </li>
               <li class="nav-item">
-                <a href="edition/" target="_blank">EVT Edition</a>
+                <a class="nav-link" href="edition/" target="_blank">EVT Edition</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
