--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
   <meta charset="utf-8">
@@ -19,56 +19,127 @@
 </head>
 
 <body>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="UGLogo1.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-centre">
-        The Constant Maid by James Shirley
+        <img src="UGLogo2.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-centre">
+        <em>The Constant Maid</em> by James Shirley
       </a>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary p-2">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="context.html">Context</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="abouttheauthor.html">About the Author</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="annotations.html">Annotations</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="bibliography.html">Bibliography</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="edition/" target="_blank">EVT Edition</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-danger" type="submit">Search</button>
             </form>
           </div>
         </div>
       </nav>
+    </div>
+  </nav>
       <div class="row">
         <div class="col-2">
-          <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
-            <nav class="nav nav-pills flex-column">
-              <a class="nav-link" href="#item-1">Context</a>
-              <a class="nav-link" href="#item-2">About the Author</a>
-              <a class="nav-link" href="#item-3">Annotations</a>
-            </nav>
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  <a href="context.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Context</a>
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body"><ul class="nav flex-column">
+                <ul class="nav flex-column"></ulclass>
+                  <li class="nav-item">
+                    <a class="nav-link active text-danger-emphasis" aria-current="page" href="#">Plot Summary</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#">Themes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#">History of Editions</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#">Cultural Impact</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#">Conventions of Early Modern Drama</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#">Masque Context</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#">Teaching <em>The Constant Maid</em></a>
+                  </li>
+                </ul>
+              </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  <a href="abouttheauthor.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">About the Author</a>
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                <ul class="nav flex-column">
+                  <li class="nav-item">
+                    <a class="nav-link active text-danger-emphasis" aria-current="page" href="#">James Shirley's Biography</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#">Irish Canon</a>
+                  </li>
+                </ul> 
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  <a href="annotations.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Annotations</a>
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                  <ul class="nav flex-column">
+                    <li class="nav-item">
+                      <a class="nav-link active text-danger-emphasis" aria-current="page" href="#">Annotation Key</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active text-danger-emphasis" href="#">Modernisation Guidelines</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active text-danger-emphasis" href="#">Stage Directions</a>
+                    </li>
+                  </ul>     
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  <a href="bibliography.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Bibliography</a>
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+              </div>
+            </div>
+          </div>
           </nav>
         </div>
-        <div class="col-lg-8 mx-auto p-3 py-md-5">
-          <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-            <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-            </a>
-          </header>
+
+  <div class="col-lg-8 mx-auto p-3 py-md-5">
           <main>
             <h1>The Constant Maid by James Shirley (1833)</h1>
             <h2>Digital Scholarly Edition</h2>
