--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  <a href="context.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Context</a>
+                  <a href="context./html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Context</a>
                 </button>
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
