--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="UGLogo2.png" alt="Logo" width="75" height="95" class="d-inline-block align-text-centre">
+        <img src="UGLogo2.png" alt="Logo" width="60" height="75" class="d-inline-block align-text-centre">
         <em>The Constant Maid</em> by James Shirley
       </a>
       <nav class="navbar navbar-expand-lg bg-body-tertiary p-2">
@@ -53,7 +53,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  <a href="context./html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Context</a>
+                  <a href="/context.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Context</a>
                 </button>
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -87,7 +87,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                  <a href="abouttheauthor.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">About the Author</a>
+                  <a href="/abouttheauthor.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">About the Author</a>
                 </button>
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -128,7 +128,7 @@
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                  <a href="bibliography.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Bibliography</a>
+                  <a href="/bibliography.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Bibliography</a>
                 </button>
               </h2>
               <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -155,7 +155,7 @@
                 <h2>Project Navigation</h2>
                 <p>Links to some sample pages, and a copy of EVT for this project</p>
                 <ul class="icon-list">
-                  <li><a href="about.html">About the Project</a></li>
+                  <li><a href="/about.html">About the Project</a></li>
                   <li><a href="edition/">EVT Edition</a></li>
                 </ul>
               </div>
