--- a/index.html
+++ b/index.html
@@ -29,24 +29,41 @@
       <a class="navbar-brand" href="index.html">
         <img src="UGLogo2.png" alt="Logo" width="60" height="75" class="d-inline-block align-text-centre">
         <em>The Constant Maid</em> by James Shirley
-      </a>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary p-2">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="edition/" target="_blank">EVT Edition</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-danger" type="submit">Search</button>
-            </form>
+        <nav class="navbar bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img src="UGLogo2.png" alt="Logo" width="60" height="75" class="d-inline-block align-text-centre">
+              <em>The Constant Maid</em> by James Shirley
+            </a>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary p-2">
+              <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="context.html">Context</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="abouttheauthor.html">About the Author</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="annotations.html">Annotations</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="bibliography.html">Bibliography</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="edition/" target="_blank">EVT Edition</a>
+                    </li>
+                  </ul>
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-danger" type="submit">Search</button>
+                  </form>
+                </div>
+              </div>
+            </nav>
           </div>
-        </div>
-      </nav>
-    </div>
-  </nav>
+        </nav>
       <div class="row">
         <div class="col-2">
           <div class="accordion accordion-flush" id="accordionFlushExample">
