--- a/bibliography.html
+++ b/bibliography.html
@@ -72,7 +72,7 @@
           </div>
         </div>
 
-  <div class="col-lg-8 mx-auto p-3 py-md-5">
+  <div class="col-lg-8 mx-1 p-3 py-md-5">
     <h1>Bibliography</h1>
     <br>
             <p>Britannica, The Editors of Encyclopaedia. "Blank Verse". Encyclopedia Britannica, 18 Oct. 2019, <a href="https://www.britannica.com/art/blank-verse" target="_blank">https://www.britannica.com/art/blank-verse</a>. Accessed 15 March 2023.</p>
