--- a/annotations.html
+++ b/annotations.html
@@ -87,7 +87,7 @@
           </div>
         </div>
 
-  <div class="col-lg-8 mx-auto p-3 py-md-5">
+  <div class="col-lg-8 mx-1 p-3 py-md-5">
     <h1>Annotations</h1>
             <br>
             <p><a href="https://www.tei-c.org/release/doc/tei-p5-doc/en/html/index.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Access TEI Guidelines Here</a></p> 
