--- a/context.html
+++ b/context.html
@@ -99,7 +99,7 @@
           </div>
         </div>
 
-  <div class="col-lg-8 mx-1 p-3 py-md-5">
+  <div class="col-lg-8 p-3 mx-1 py-md-5">
     <h1>Context</h1>
 
               <br>
